# fableforge-14b

./: README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: convert_data.py  train.sh  train_colab.ipynb
src/fableforge_14b/: __init__.py  cli.py
src/fableforge_14b/evaluation/: bench_agent.py
src/fableforge_14b/inference/: server.py
src/fableforge_14b/model/: merge_lora.py  quantize.py
src/fableforge_14b/training/: stage1_behavior_shaping.py  stage2_skill_distillation.py  stage3_error_recovery.py  stage4_dpo_alignment.py
src/fableforge_14b/training/configs/: stage1.yaml  stage2.yaml  stage3.yaml  stage4.yaml
