[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fableforge-14b"
version = "0.1.0"
description = "FableForge-14B: Four-stage training pipeline for a 14B coding agent model"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "FableForge", email = "team@fableforge.ai"}]
keywords = ["agent", "training", "llm", "coding", "fine-tuning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
train = [
    "torch>=2.2.0",
    "transformers>=4.36",
    "datasets>=2.20.0",
    "peft>=0.7",
    "trl>=0.7",
    "accelerate>=0.24",
    "bitsandbytes>=0.41",
    "unsloth>=2024.1",
    "wandb>=0.16",
]
gpu = [
    "torch>=2.2.0",
    "transformers>=4.36",
    "datasets>=2.20.0",
    "peft>=0.7",
    "trl>=0.7",
    "accelerate>=0.24",
    "bitsandbytes>=0.41",
    "unsloth>=2024.1",
]
all = [
    "fableforge-14b[train,gpu]",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
fableforge14b = "fableforge_14b.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/fableforge_14b"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I", "N", "W", "UP"]